fixed issue with text behind the image.

--- a/src/App.css
+++ b/src/App.css
@@ -74,27 +74,36 @@ nav ul li a:hover{
 .header {
   background-color: #495e57;
   padding: 40px 0;
+  height: 400px;
 }
 
 .header section {
-color: #EDEFEE;
-padding: 10px 13%;
-position: relative;
+  color: #EDEFEE;
+  padding: 10px 13%;
+  display: flex; /* Use Flexbox to arrange items side by side */
+  justify-content: space-around; /* Distribute space between items */
+  align-items: flex-start; /* Align items at the top */
+  flex-wrap: wrap; /* Allow elements to wrap */
 }
-
 
 h2 {
   color: #F4CE14;
   font-size: 40px;
+  margin-bottom: 20px;
 }
 
 h3 {
   font-size: 25px;
+  margin-bottom: 15px;
+}
+
+.banner {
+  max-width: 520px; 
+  flex: 1; 
 }
 
 .banner p {
   font-size: 20px;
-  max-width: 520px;
   line-height: 1.5;
   margin-bottom: 30px;
 }
@@ -111,18 +120,19 @@ button {
   cursor: pointer;
 }
 
-.banner-img{
-  position: absolute;
-  right: 13%;
-  top: 15%;
-  width: 400px;
+.banner-img {
+  max-width: 350px; 
+  height: auto; 
+  margin-left: 20px; 
+  flex-shrink: 0; 
 }
 
 .banner-img img {
   width: 100%;
-  height: 400px;
-  border-radius: 20px;
+  height: auto;
+  border-radius: 16px;
 }
+
 
 
 form, .comfirm{
